force-app/main/default/objects/Portfolio__c/fields/Contact_Me__c.field-meta.xml
<CustomField>
    <fullName>Contact_Me__c</fullName>
    <label>Contact Me</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>