force-app/main/default/objects/Portfolio__c/fields/Databases__c.field-meta.xml
<CustomField>
    <fullName>Databases__c</fullName>
    <label>Databases</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>