force-app/main/default/objects/Portfolio__c/fields/Operating_Systems__c.field-meta.xml
<CustomField>
    <fullName>Operating_Systems__c</fullName>
    <label>Operating Systems</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>