force-app/main/default/objects/Portfolio__c/fields/Programming_Languages__c.field-meta.xml
<CustomField>
    <fullName>Programming_Languages__c</fullName>
    <label>Programming Languages</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>