force-app/main/default/objects/Portfolio__c/fields/RangerLevel__c.field-meta.xml
<CustomField>
    <fullName>RangerLevel__c</fullName>
    <label>Ranger Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scout</fullName>
            </value>
            <value>
                <fullName>Hiker</fullName>
            </value>
            <value>
                <fullName>Explorer</fullName>
            </value>
            <value>
                <fullName>Adventurer</fullName>
            </value>
            <value>
                <fullName>Mountaineer</fullName>
            </value>
            <value>
                <fullName>Expeditioner</fullName>
            </value>
            <value>
                <fullName>Ranger</fullName>
            </value>
            <value>
                <fullName>Double star ranger</fullName>
            </value>
            <value>
                <fullName>Triple star ranger</fullName>
            </value>
            <value>
                <fullName>Four star ranger</fullName>
            </value>
            <value>
                <fullName>Five star ranger</fullName>
            </value>
            <value>
                <fullName>All star ranger</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>