force-app/main/default/objects/Portfolio__c/fields/Resume_Url__c.field-meta.xml
<CustomField>
    <fullName>Resume_Url__c</fullName>
    <label>Resume Url</label>
    <type>Url</type>
</CustomField>