force-app/main/default/objects/Portfolio__c/fields/Software_Development_Methodologies__c.field-meta.xml
<CustomField>
    <fullName>Software_Development_Methodologies__c</fullName>
    <label>Software Development Methodologies</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>