force-app/main/default/objects/Portfolio__c/fields/Software_Tools__c.field-meta.xml
<CustomField>
    <fullName>Software_Tools__c</fullName>
    <label>Software Tools</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>