force-app/main/default/objects/Portfolio__c/fields/Trails__c.field-meta.xml
<CustomField>
    <fullName>Trails__c</fullName>
    <label>Trails</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>